tests/NormalTests/paczka1/small_fuzzy/71834528.err
Error in line 7: Xh5NgodtrlT A917 -1,6
Error in line 11: BCg3czuoCxQ S236 27,50
